# kommunikationszentrum

./: .env.example  .env.production.example  .gitignore  Cargo.toml  README.md  dioxusllms.txt  kommunikationszentrum.code-workspace
.env/: .env.oidc
.github/: copilot-instructions.md
.zed/: settings.json  tasks.json
admin/: Cargo.toml  Dioxus.toml  README.md
admin/src/: config.rs  main.rs  main2.rs  oauth.rs  router.rs  use_spacetime_db.rs
admin/src/components/: navbar.rs
admin/src/module_bindings/: account_type.rs  active_subscriptions_table.rs  add_message_category_reducer.rs  add_subscription_reducer.rs  add_test_accounts_reducer.rs  admin_identity_type.rs  block_ip_reducer.rs  blocked_ip_type.rs  claim_next_mail_delivery_reducer.rs  claim_next_mail_ingress_reducer.rs  complete_mail_ingress_reducer.rs  create_webhook_token_reducer.rs  dioxus.rs  dump_mta_logs_to_server_logs_reducer.rs  enqueue_mail_delivery_reducer.rs  ensure_subscription_unsubscribe_token_reducer.rs  fail_mail_delivery_reducer.rs  fail_mail_ingress_reducer.rs  get_mta_logs_reducer.rs  handle_mta_hook_reducer.rs  mail_deliveries_table.rs  mail_delivery_event_type.rs  mail_delivery_events_table.rs  mail_delivery_type.rs  mail_ingress_table.rs  mail_ingress_type.rs  mark_mail_delivery_bounced_reducer.rs  mark_mail_delivery_sent_reducer.rs  message_categories_table.rs  message_category_type.rs  mod.rs  mta_message_log_table.rs  mta_message_log_type.rs  register_admin_identity_reducer.rs  remove_message_category_reducer.rs  remove_subscription_reducer.rs  retry_mail_ingress_reducer.rs  revoke_webhook_token_reducer.rs  schedule_mail_delivery_retry_reducer.rs  sender_mail_deliveries_table.rs  (+8 more)
admin/src/pages/: categories.rs  debug.rs  members.rs  messages.rs  mod.rs  subscriptions.rs
docs/: book.toml  spacetimellms.txt
docs/src/: SUMMARY.md
docs/src/appendices/: database-diagrams.md
docs/src/auth/: jwt-tokens.md  oauth-integration.md  overview.md  permissions.md
docs/src/core/: architecture.md  databse.md
docs/src/core/admin/: admin-features.md
docs/src/core/sender/: configuration.md  control-flow.md  overview.md  usage.md
docs/src/core/server/: event-flow.md  http-handlers.md  overview.md  reducers-reference.md  tables-reference.md  usage.md
docs/src/core/spacetime-http-handlers/: api-endpoints.md
docs/src/core/spacetimedb/: database-schema.md  module-publishing.md  reducers-reference.md  tables-reference.md
docs/src/core/webhook-proxy/: api-endpoints.md  mta-hook-processing.md  overview.md  user-sync.md
docs/src/development/: admin-frontend-restructure.md  sender.md  server.md
docs/src/email/: categories.md  mta-hook-config.md  overview.md  processing-flow.md  stalwart-setup.md  subscriptions.md
docs/src/introduction/: overview.md
docs/src/reference/: environment-variables.md
docs/src/setup/: component-installation.md  configuration.md  django-integration.md  webhook-proxy.md
docs/testscripts/: spacetime_oidc_login.py  test-mta-hooks.sh  test-user-sync.sh  test_sync.sh
docs/theme/: custom.css
grafana/: config.alloy  docker-compose.yaml  loki-config.yaml  tempo.yaml
grafana/provisioning/datasources/: datasources.yaml
sender/: Cargo.toml
sender/src/: config.rs  mail.rs  main.rs
sender/src/module_bindings/: account_type.rs  active_unsubscribe_tokens_table.rs  add_message_category_reducer.rs  add_subscription_reducer.rs  blocked_ip_type.rs  claim_next_mail_delivery_reducer.rs  claim_next_mail_ingress_reducer.rs  complete_mail_ingress_reducer.rs  create_webhook_token_reducer.rs  dump_mta_logs_to_server_logs_reducer.rs  enqueue_mail_delivery_reducer.rs  ensure_subscription_unsubscribe_token_reducer.rs  fail_mail_delivery_reducer.rs  fail_mail_ingress_reducer.rs  handle_mta_hook_reducer.rs  mark_mail_delivery_bounced_reducer.rs  mark_mail_delivery_sent_reducer.rs  mod.rs  mta_connection_log_type.rs  provision_message_category_procedure.rs  received_message_type.rs  register_admin_identity_reducer.rs  remove_message_category_reducer.rs  remove_subscription_reducer.rs  retry_mail_ingress_reducer.rs  revoke_webhook_token_reducer.rs  schedule_mail_delivery_retry_reducer.rs  subscription_unsubscribe_token_type.rs  subscription_unsubscribe_tokens_table.rs  sync_user_reducer.rs  visible_webhook_tokens_table.rs
server/: Cargo.toml
server/docs/: DATABASE_SCHEMA_README.md  MTA_HOOK_README.md  database_schema.dot  mta_processing_flow.dot  simple_er_diagram.dot  test-mta-hooks.sh
server/src/: account.rs  delivery.rs  http_handlers.rs  lib.rs  mailing.rs  mta.rs
webhook-proxy/: Cargo.toml
webhook-proxy/src/: config.rs  main.rs  mta_hook.rs
webhook-proxy/src/module_bindings/: account_table.rs  account_type.rs  add_message_category_reducer.rs  add_reducer.rs  add_subscription_reducer.rs  add_test_accounts_reducer.rs  admin_identities_table.rs  admin_identity_type.rs  block_ip_reducer.rs  blocked_ip_type.rs  blocked_ips_table.rs  get_webhook_logs_reducer.rs  handle_webhook_reducer.rs  message_categories_table.rs  message_category_type.rs  mod.rs  mta_connection_log_table.rs  mta_connection_log_type.rs  mta_message_log_table.rs  mta_message_log_type.rs  person_table.rs  person_type.rs  say_hello_reducer.rs  subscription_type.rs  subscriptions_table.rs  unregister_admin_identity_reducer.rs  visible_accounts_table.rs  visible_subscriptions_table.rs  webhook_log_table.rs  webhook_log_type.rs
