[package]
name = "admin"
version = "0.1.0"
authors = ["Franz Dietrich <dietrich@teilgedanken.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = [] }
futures-util = "0.3.31"
spacetimedb-sdk = { git = "https://github.com/thlsrms/SpacetimeDB/", branch = "rust-web-sdk", features = [
    "web",
] }
stalwart_mta_hook_types = { version = "0.1" }
hex = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
web-sys = "0.3"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.22"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
