[package]
name = "admin"
version = "0.1.0"
authors = ["Franz Dietrich <dietrich@teilgedanken.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-bootstrap-css = { git = "https://github.com/enaut/dioxus-bootstrap", branch = "development" }
futures-util = "0.3"
spacetimedb-sdk = { version = "2.4" }
stalwart_mta_hook_types = { version = "0.1" }
hex = "0.4"
blake3 = "1.3"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
urlencoding = "2.1"
openidconnect = { version = "4", default-features = false, features = [
    "reqwest",
] }
base64 = "0.22"
url = "2"
web-sys = { version = "0.3", features = [
    "Window",
    "History",
    "Location",
    "Storage",
    "Navigator",
    "Clipboard",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
dotenvy = "0.15"

[features]
default = ["web"]
web = ["dioxus/web", "spacetimedb-sdk/browser"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
