[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sender"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lettre = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacetimedb-sdk = { version = "2.4" }
thiserror = "2"
tracing = "0.1"
