[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sender"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lettre = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacetimedb-sdk = { version = "2.6" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.33"
opentelemetry = { version = "0.32", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.32", features = [
    "rt-tokio",
    "trace",
    "logs",
] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "logs"] }
opentelemetry-appender-tracing = "0.32"
tokio = { version = "1", features = ["full"] }
