[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.3.0"
log = "0.4"
stalwart_mta_hook_types = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
