[package]
name = "webhook-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webhook-proxy"
path = "src/main.rs"

[[bin]]
name = "mta-hook"
path = "src/mta_hook.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacetimedb-sdk = "1.2.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1.0"
stalwart_mta_hook_types = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
